--- a/TODO
+++ b/TODO
@@ -1,8 +1,17 @@
 TODO
 ----
 
+* Making phone calls
+  - audio
+  - hanging up
+  - plumb through to main thread
+
+* SMS
+  - write PDU stuff
+  - plumb through to main thread
+
 * Convert test.js into an xpcshell-test
-* Build out more functionality for network status, signal strenght,
+* Build out more functionality for network status, signal strength,
   phone calls, SMS, etc. in the RIL object (and test.js, test.html)
 * Implement communication with mainthread via postMessage
 * Fake mainthread communication by including test.html in <iframe>
